--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+     
+    "lint": "next lint",
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  "build": "prisma generate && next build",
+  "start": "next start",
+  "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
